refactor: make set act as full replace
